# SpriteFactory

./: .env.example  .gitattributes  .gitignore  BUILD_LOCK.md  CHANGELOG.md  CLEANUP_PHASE_LOG.md  LICENSE  README.md  RUN_AUDIT.ps1  build_exe.ps1  build_exe_onefile.ps1  main.py  pyinstaller_version_info.py  pyproject.toml  requirements.txt  run_app.ps1  spritefactory.spec  spritefactory_onefile.spec
docs/: AUDIT_CHECKLIST.md  (+17 more)
image_engine_app/: README.md  __init__.py  __main__.py  launcher.py  pyproject.toml
image_engine_app/app/: audit.py  bootstrap.py  identity.py  logging_config.py  main.py  paths.py  preset_store.py  settings_store.py  ui_controller.py  web_sources_models.py
image_engine_app/assets/: __init__.py
image_engine_app/docs/: DEFAULT_WEB_SOURCES.json  INTEGRATION_CHECKLIST.md  WEB_SOURCES_SMART_LAYER_FULL_BREAKDOWN.md  WEB_SOURCES_SPEC.md
image_engine_app/tests/: test_analysis.py  test_app_bootstrap.py  test_apply_coordinator.py  test_architecture_boundaries.py  test_asset_edit_service.py  test_asset_export.py  test_asset_import_service.py  test_asset_profile_service.py  test_asset_tabs.py  test_background_scan.py  test_batch_coordinator.py  test_batch_manager_dialog.py  test_batch_preset_rules_service.py  test_batch_queue_state.py  test_batch_run_prep.py  test_batch_runner.py  test_batch_workflow_service.py  test_builtin_presets.py  test_classifier.py  test_control_strip.py  test_control_strip_state.py  test_edit_architecture.py  test_edit_coordinator.py  test_export_architecture.py  test_export_bar.py  test_export_controls.py  test_export_coordinator.py  test_export_predictor.py  test_export_source.py  test_export_workflow_service.py  test_format_detect.py  test_frame_processing.py  test_gif_export.py  test_heavy_queue.py  test_history.py  test_import_architecture.py  test_import_result.py  test_ingest_local.py  test_ingest_url.py  test_launcher.py  (+41 more)
(+127 files in other folders)
